[package]
name = "hewn"
version = "0.1.0"
authors = ["thehouseplant <sean.collins@outlook.com>"]
edition = "2018"

[dependencies]
gloo = "0.5.0"
gloo-utils = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.55", features = [
    "Request", 
    "RequestInit",
    "RequestMode",
    "Response",
]}
yew = "0.19"
yew-router = "0.16"