[package]
name = "hyewn"
version = "0.1.0"
authors = ["thehouseplant <sean.collins@outlook.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.10", features = ["serde", "wasmbind"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.55", features = [
    "Headers",
    "Request", 
    "RequestInit",
    "RequestMode",
    "Response",
]}
yew = "0.19"
yew-router = "0.16"